--- a/cv.html
+++ b/cv.html
@@ -49,8 +49,9 @@
                         </div>
                         <div class="lists">
                             <h2>contact</h2>
-                            <p><i class="fas fa-phone-alt"></i>: +32 495 229 427</p>
-                            <p><i class="fas fa-at"></i>: nikita-moonen@outlook.com</p>
+                            <p><i class="fas fa-phone-alt"></i>: <a href="tel:+32495229427">+32 495 229 427</a></p>
+                            <p><i class="fas fa-at"></i>: <a
+                                    href="mailto:nikita-moonen@outlook.com">nikita-moonen@outlook.com</a></p>
                             <p><i class="fas fa-globe"></i>: <a target="_blank"
                                     href="https://nikkiita.github.io/portfolio/">
                                     www.nikitamoonen.be</a></p>
@@ -118,7 +119,7 @@
                             <h2>education</h2>
                             <h3>flutter development</h3>
                             <h4>Udemy | 2019</h4>
-                            <h5><a href="https://www.udemy.com/certificate/UC-GACZQOSI/">Certificate Flutter Dart</a>
+                            <h5><a href="https://www.udemy.com/certificate/UC-GACZQOSI/">Certificate Flutter & Dart</a>
                             </h5>
                             <h3>front end web developer</h3>
                             <h4>Udemy | 2019</h4>
