--- a/index.html
+++ b/index.html
@@ -252,17 +252,23 @@
         <div class="projects section container">
             <h2>projects</h2>
             <div class="row">
-                <div class="col-xs-6 projectDrumkit">
-                    <img src="images/portfolio/drumKit.png" alt="drum kit">
-                </div>
-                <div class="col-xs-6">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo officiis omnis minus hic earum
-                        unde placeat sequi odit quas pariatur. Eveniet ratione dolores praesentium pariatur officia, ab
-                        expedita earum optio.</p>
+                <div class="span4">
+                    <img class="img-drumKit" src="images/portfolio/drumKit.png" alt="drum kit">
+                    <div class="content-heading">
+                        <h5>drum kit</h5>
+                    </div>
+                    <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
+                        When you push the button on your keyboard, you hear the sound of that specific drum. You
+                        can also click on the image to play the sounds of that drum. </p>
+                    <a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
+                        MORE...</a>
+                    <a class="details" target="_blank" href="https://github.com/nikkiita/drumKit">CODE</a>
                 </div>
             </div>
 
-            <button><a href="projects.html">See more of my projects</a></button>
+            <div class="projectButton">
+                <a href="projects.html" class="projectBtn">See more of my projects</a>
+            </div>
         </div>
 
         <div class="copyrightSection">
