--- a/projects.html
+++ b/projects.html
@@ -58,160 +58,7 @@
             </div>
         </nav>
 
-
         <div class="container content">
-            <div class="row line">
-                <h3 id="apps" class="sectionTitle">apps</h3>
-            </div>
-            <div class="block">
-                <div class="row">
-                    <br class="line">
-                    <div class="span4">
-                        <img class="img-bmiResultPage apps-right" src="images/portfolio/bmi-calculator-resultPage.jpg"
-                            alt="bmi-calculator-resultPage">
-                        <img class="img-bmiFirstPage apps-right" src="images/portfolio/bmi-calculator-firstPage.jpg"
-                            alt="bmi-calculator-firstPage">
-                        <div class="content-heading">
-                            <h5>BMI calculator</h5>
-                        </div>
-                        <p>calculate your BMI or your body mass index with this beautiful app. You get a full result of
-                            the calculation on the second page if you press calculate.</p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-clima apps-left" src="images/portfolio/clima-app-first-page.jpg"
-                            alt="Clima app first page">
-                        <img class="img-clima apps-left" src="images/portfolio/clima-app-find-page.jpg"
-                            alt="Clima app find page">
-                        <img class="img-clima apps-left" src="images/portfolio/clima-app-new-york-page.jpg"
-                            alt="Clima app new-york page">
-                        <div class="content-heading">
-                            <h5>clima app</h5>
-                        </div>
-                        <p>In this app you can get the weather of your current location. But not only that you can also
-                            get the wheather of any location of your choice if you press the city icon you can search
-                            any location you want.</p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-magic8Ball apps-right" src="images/portfolio/magic8ball.jpg"
-                            alt="magic 8 ball first page">
-                        <img class="img-magic8Ball apps-right" src="images/portfolio/magic8Ball2.jpg"
-                            alt="magic 8 ball when clicked">
-                        <div class="content-heading">
-                            <h5>magic 8 ball</h5>
-                        </div>
-                        <p>A decision making app. It's a magic 8 ball app which you can ask to answer all of your
-                            difficult life questions such as Should
-                            I eat candy or should I eat healthy snack. This app has a whole bunch of random images.
-                            And every time you tap on the Magic 8 Ball it'll give you a new answer.</p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-bitcoin apps-left" src="images/portfolio/bitcoin-ticker-firstPage.jpg"
-                            alt="first page bitcoin ticker">
-                        <img class="img-bitcoin apps-left" src="images/portfolio/bitcoin-ticker-valuta.jpg"
-                            alt="valuta page bitcoin ticker">
-                        <div class="content-heading">
-                            <h5>bitcoin ticker</h5>
-                        </div>
-                        <p>It's an app that is going to tell us the current price in various currencies such as euros or
-                            pounds or dollars for various crypto currencies such as Bitcoin or theorem and light coins.
-                        </p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-dicee apps-right" src="images/portfolio/diceeFirstDice.jpg"
-                            alt="moving first dice">
-                        <img class="img-dicee apps-right" src="images/portfolio/diceeSecondDice.jpg"
-                            alt="moving second dice">
-                        <div class="content-heading">
-                            <h5>dicee app</h5>
-                        </div>
-                        <p>A dice rolling app. When you click on it it's going to change the dice face. So you'll be
-                            able to use this to settle any scores
-                            you have in real life. Such as who has to take out the trash.</p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-quizler apps-left" src="images/portfolio/quizlerFirstPage.jpg"
-                            alt="beginning of the quiz">
-                        <img class="img-quizler apps-left" src="images/portfolio/quizlerEndPage.jpg"
-                            alt="ending of the quiz">
-                        <div class="content-heading">
-                            <h5>quizler app</h5>
-                        </div>
-                        <p> A quiz app where the user has to answer questions and we'll tell them how many they got
-                            right. As you will go on in the quiz you can follow your score on the bottom of the screen.
-                        </p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-xlophone apps-right" src="images/portfolio/xylophone.jpg" alt="a xylophone">
-                        <div class="content-heading">
-                            <h5>xylophone</h5>
-                        </div>
-                        <p>This is a basic xylophone for mobile devices. When you touch a color on your phone there
-                            plays a sound. Each color has it own unique sound.</p>
-                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
-                        </p>
-                        <button>SEE MORE...</button>
-                        <button>CODE</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="container">
             <div class="row line">
                 <h3 id="website" class="sectionTitle">websites</h3>
             </div>
@@ -272,6 +119,159 @@
                 </div>
             </div>
         </div>
+        <div class="container ">
+            <div class="row line">
+                <h3 id="apps" class="sectionTitle">apps</h3>
+            </div>
+            <div class="block">
+                <div class="row">
+                    <br class="line">
+                    <div class="span4">
+                        <img class="img-bmiResultPage apps-right" src="images/portfolio/bmi-calculator-resultPage.jpg"
+                            alt="bmi-calculator-resultPage">
+                        <img class="img-bmiFirstPage apps-right" src="images/portfolio/bmi-calculator-firstPage.jpg"
+                            alt="bmi-calculator-firstPage">
+                        <div class="content-heading">
+                            <h5>BMI calculator</h5>
+                        </div>
+                        <p>calculate your BMI or your body mass index with this beautiful app. You get a full result of
+                            the calculation on the second page if you press calculate.</p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-clima apps-left" src="images/portfolio/clima-app-first-page.jpg"
+                            alt="Clima app first page">
+                        <img class="img-clima apps-left" src="images/portfolio/clima-app-find-page.jpg"
+                            alt="Clima app find page">
+                        <img class="img-clima apps-left" src="images/portfolio/clima-app-new-york-page.jpg"
+                            alt="Clima app new-york page">
+                        <div class="content-heading">
+                            <h5>clima app</h5>
+                        </div>
+                        <p>In this app you can get the weather of your current location. But not only that you can also
+                            get the wheather of any location of your choice if you press the city icon you can search
+                            any location you want.</p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-magic8Ball apps-right" src="images/portfolio/magic8ball.jpg"
+                            alt="magic 8 ball first page">
+                        <img class="img-magic8Ball apps-right" src="images/portfolio/magic8Ball2.jpg"
+                            alt="magic 8 ball when clicked">
+                        <div class="content-heading">
+                            <h5>magic 8 ball</h5>
+                        </div>
+                        <p>A decision making app. It's a magic 8 ball app which you can ask to answer all of your
+                            difficult life questions such as Should
+                            I eat candy or should I eat healthy snack. This app has a whole bunch of random images.
+                            And every time you tap on the Magic 8 Ball it'll give you a new answer.</p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-bitcoin apps-left" src="images/portfolio/bitcoin-ticker-firstPage.jpg"
+                            alt="first page bitcoin ticker">
+                        <img class="img-bitcoin apps-left" src="images/portfolio/bitcoin-ticker-valuta.jpg"
+                            alt="valuta page bitcoin ticker">
+                        <div class="content-heading">
+                            <h5>bitcoin ticker</h5>
+                        </div>
+                        <p>It's an app that is going to tell us the current price in various currencies such as euros or
+                            pounds or dollars for various crypto currencies such as Bitcoin or theorem and light coins.
+                        </p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-dicee apps-right" src="images/portfolio/diceeFirstDice.jpg"
+                            alt="moving first dice">
+                        <img class="img-dicee apps-right" src="images/portfolio/diceeSecondDice.jpg"
+                            alt="moving second dice">
+                        <div class="content-heading">
+                            <h5>dicee app</h5>
+                        </div>
+                        <p>A dice rolling app. When you click on it it's going to change the dice face. So you'll be
+                            able to use this to settle any scores
+                            you have in real life. Such as who has to take out the trash.</p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-quizler apps-left" src="images/portfolio/quizlerFirstPage.jpg"
+                            alt="beginning of the quiz">
+                        <img class="img-quizler apps-left" src="images/portfolio/quizlerEndPage.jpg"
+                            alt="ending of the quiz">
+                        <div class="content-heading">
+                            <h5>quizler app</h5>
+                        </div>
+                        <p> A quiz app where the user has to answer questions and we'll tell them how many they got
+                            right. As you will go on in the quiz you can follow your score on the bottom of the screen.
+                        </p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-xlophone apps-right" src="images/portfolio/xylophone.jpg" alt="a xylophone">
+                        <div class="content-heading">
+                            <h5>xylophone</h5>
+                        </div>
+                        <p>This is a basic xylophone for mobile devices. When you touch a color on your phone there
+                            plays a sound. Each color has it own unique sound.</p>
+                        <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button> -->
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
         <div class="copyrightSection">
             <div class="col-md-12 text-center">
                 <p>&copy; Copyright by Moonen Nikita 2019</p>
