--- a/index.html
+++ b/index.html
@@ -119,24 +119,24 @@
                     </div>
                     <div class="owl-carousel owl-theme">
                         <div class="skill">
-                            <span class="chart" data-percent="85">
-                                <span class="percent">85</span>
+                            <span class="chart" data-percent="95">
+                                <span class="percent">95</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>HTML</h4>
                             <p>Used in my web based projects</p>
                         </div>
                         <div class="skill">
-                            <span class="chart" data-percent="80">
-                                <span class="percent">80</span>
+                            <span class="chart" data-percent="85">
+                                <span class="percent">85</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>CSS</h4>
                             <p>Used in my web based projects for styling</p>
                         </div>
                         <div class="skill">
-                            <span class="chart" data-percent="60">
-                                <span class="percent">60</span>
+                            <span class="chart" data-percent="65">
+                                <span class="percent">65</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>BOOTSTRAP</h4>
@@ -144,8 +144,8 @@
                         </div>
 
                         <div class="skill">
-                            <span class="chart" data-percent="67">
-                                <span class="percent">67</span>
+                            <span class="chart" data-percent="75">
+                                <span class="percent">75</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>JavaScript</h4>
@@ -172,7 +172,7 @@
                                 <span class="percent">70</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
-                            <h4>FLUTTER Darts</h4>
+                            <h4>FLUTTER Dart</h4>
                             <p>Used in my cross-platform apps.</p>
                         </div>
                     </div>
