--- a/cv.html
+++ b/cv.html
@@ -87,7 +87,7 @@
                             <h3>Proces Operator</h3>
                             <h4>Veurne SnackFoods | Jan 2018 - Present day</h4>
                             <ul>
-                                <li>Control of fully automatic machine</li>
+                                <li>Control of fully automated machine</li>
                                 <li>responsible for starting up and shutting down, cleaning and converting the machine
                                 </li>
                                 <li>ensuring the adjustment of process parameters</li>
@@ -129,10 +129,10 @@
                             <h4>Tweedekansonderwijs | 2016 - 2017</h4>
                             <h3>personal care / kitchen</h3>
                             <h4>Onze-Lieve-Vrouw-Hemelvaart Instituut | 2009 - 2011</h4>
-                            <h5>Certificate seconde grade</h5>
+                            <h5>Certificate seconde grad</h5>
                             <h3>Haircare / Bodycare</h3>
                             <h4>Technisch Instituut Heilige Familie | 2005 - 2009</h4>
-                            <h5>Certificate seconde grade</h5>
+                            <h5>Certificate seconde grad</h5>
                         </div>
                     </div> <!-- end wrapper -->
                 </div> <!-- end section-right -->
