--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-md-7">
                         <h4>My name is Moonen Nikita</h4>
-                        <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years and currently work as a
+                        <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years old and currently work as a
                             process operator at
                             Veurne SnackFoods.</p>
                         <p>I have a passion for web design and love to create for web and mobile devices.</p>
