--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>BOOTSTRAP</h4>
-                            <p>My latest projects are with bootstrap. Still finetunning my skill but getting there.</p>
+                            <p>My latest projects are with bootstrap. Still fine tuning my skill but getting there.</p>
                         </div>
 
                         <div class="skill">
@@ -249,7 +249,7 @@
             </div>
         </div>
 
-        <div class="projects section container">
+        <div id="projects" class="projects section container">
             <h2>projects</h2>
             <div class="row">
                 <div class="span4">
