--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
                         <div class="content-heading">
                             <h5>password generator</h5>
                         </div>
-                        <p>This is a simple password generator. You can change the lenght of the password you want to
-                            get. It then loops true the function to get the length you asked for.</p>
+                        <p>This is a simple password generator. You can change the length of the password that you
+                            desire. It then loops true the function to get the length you asked for.</p>
                         <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
                         <button><a class="details" target="_blank"
@@ -106,7 +106,8 @@
                         <div class="content-heading">
                             <h5>drum kit</h5>
                         </div>
-                        <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
+                        <p>This is a website with sound animation. Each drum is linked to a special key on your
+                            keyboard.
                             When you push the button on your keyboard, you hear the sound of that specific drum. You
                             can also click on the image to play the sounds of that drum. </p>
                         <p>If you want to test me out or you just want to take a closer look at the code behind it all.
@@ -134,7 +135,8 @@
                         <div class="content-heading">
                             <h5>BMI calculator</h5>
                         </div>
-                        <p>calculate your BMI or your body mass index with this beautiful app. You get a full result of
+                        <p>calculate your BMI or your body mass index with this beautiful app. You get the full result
+                            of
                             the calculation on the second page if you press calculate.</p>
                         <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
@@ -157,7 +159,7 @@
                             <h5>clima app</h5>
                         </div>
                         <p>In this app you can get the weather of your current location. But not only that you can also
-                            get the wheather of any location of your choice if you press the city icon you can search
+                            get the weather of any location of your choice if you press the city icon you can search
                             any location you want.</p>
                         <!-- <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
