--- a/index.html
+++ b/index.html
@@ -250,24 +250,26 @@
         </div>
 
         <div id="projects" class="projects section container">
-            <h2>projects</h2>
-            <div class="row">
-                <div class="span4">
-                    <img class="img-drumKit" src="images/portfolio/drumKit.png" alt="drum kit">
-                    <div class="content-heading">
-                        <h5>drum kit</h5>
+            <div class="container">
+                <h2>projects</h2>
+                <div class="row">
+                    <div class="span4">
+                        <img class="img-drumKit" src="images/portfolio/drumKit.png" alt="drum kit">
+                        <div class="content-heading">
+                            <h5>drum kit</h5>
+                        </div>
+                        <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
+                            When you push the button on your keyboard, you hear the sound of that specific drum. You
+                            can also click on the image to play the sounds of that drum. </p>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank" href="https://github.com/nikkiita/drumKit">CODE</a>
                     </div>
-                    <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
-                        When you push the button on your keyboard, you hear the sound of that specific drum. You
-                        can also click on the image to play the sounds of that drum. </p>
-                    <a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
-                        MORE...</a>
-                    <a class="details" target="_blank" href="https://github.com/nikkiita/drumKit">CODE</a>
                 </div>
-            </div>
 
-            <div class="projectButton">
-                <a href="projects.html" class="projectBtn">See more of my projects</a>
+                <div class="projectButton">
+                    <a href="projects.html" class="projectBtn">See more of my projects</a>
+                </div>
             </div>
         </div>
 
