final fine tuning

--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                         <div class="content-heading">
                             <h5>drum kit</h5>
                         </div>
-                        <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
+                        <p>This is a website with sound animation. Each drum is linked to a special key on your
+                            keyboard.
                             When you push the button on your keyboard, you hear the sound of that specific drum. You
                             can also click on the image to play the sounds of that drum. </p>
                         <a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
