--- a/projects.html
+++ b/projects.html
@@ -75,11 +75,10 @@
                             desire. It then loops true the function to get the length you asked for.</p>
                         <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
-                        <button><a class="details" target="_blank"
-                                href="https://nikkiita.github.io/password-generator/">SEE
-                                MORE...</a></button>
-                        <button><a class="details" target="_blank"
-                                href="https://github.com/nikkiita/password-generator">CODE</a></button>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/password-generator/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank"
+                            href="https://github.com/nikkiita/password-generator">CODE</a>
                     </div>
                 </div>
                 <br>
@@ -93,10 +92,9 @@
                             like, to see the difference with a responsive website.</p>
                         <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
-                        <button><a class="details" target="_blank" href="https://nikkiita.github.io/tacky-Trucks/">SEE
-                                MORE...</a></button>
-                        <button><a class="details" target="_blank"
-                                href="https://github.com/nikkiita/tacky-Trucks">CODE</a></button>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/tacky-Trucks/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank" href="https://github.com/nikkiita/tacky-Trucks">CODE</a>
                     </div>
                 </div>
                 <br>
@@ -112,10 +110,9 @@
                             can also click on the image to play the sounds of that drum. </p>
                         <p>If you want to test me out or you just want to take a closer look at the code behind it all.
                         </p>
-                        <button><a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
-                                MORE...</a></button>
-                        <button><a class="details" target="_blank"
-                                href="https://github.com/nikkiita/drumKit">CODE</a></button>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank" href="https://github.com/nikkiita/drumKit">CODE</a>
                     </div>
                 </div>
             </div>
