update the main page

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
                     </div>
                     <div class="col-md-7">
                         <h4>My name is Moonen Nikita</h4>
-                        <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years old and currently work as a
-                            process operator at
-                            Veurne SnackFoods.</p>
+                        <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years old</p>
                         <p>I have a passion for web design and love to create for web and mobile devices.</p>
                         <div class="cvLink">
                             <a href="cv.html" class="cv">curriculum vitae</a>
@@ -161,7 +159,7 @@
                         </div>
                         <div class="skill">
                             <span class="chart" data-percent="55">
-                                <span class="percent">55</span>
+                                <span class="percent">50</span>
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>jQuery</h4>
@@ -174,6 +172,14 @@
                             </span>
                             <h4>FLUTTER Dart</h4>
                             <p>Used in my cross-platform apps.</p>
+                        </div>
+                        <div class="skill">
+                            <span class="chart" data-percent="10">
+                                <span class="percent">10</span>
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>React</h4>
+                            <p>Recent started with learning React</p>
                         </div>
                     </div>
                 </div>
@@ -190,7 +196,7 @@
                                     <i class="far fa-clock"></i>
                                 </div>
                                 <div class="squareContent">
-                                    <h2 class="counter">6 </h2>
+                                    <h2 class="counter">9 </h2>
                                     <h3>Months Experience</h3>
                                 </div>
                             </div>
@@ -276,7 +282,7 @@
 
         <div class="copyrightSection">
             <div class="col-md-12 text-center">
-                <p>&copy; Copyright by Moonen Nikita 2019</p>
+                <p>&copy; Copyright by Nikita Moonen 2019</p>
             </div>
         </div>
 
