update CV and fine tune main page

--- a/cv.html
+++ b/cv.html
@@ -85,7 +85,7 @@
                         <div class="content">
                             <h2>work experience</h2>
                             <h3>Proces Operator</h3>
-                            <h4>Veurne SnackFoods | Jan 2018 - Present day</h4>
+                            <h4>Veurne SnackFoods | Jan 2018 - Nov 2019</h4>
                             <ul>
                                 <li>Control of fully automated machine</li>
                                 <li>responsible for starting up and shutting down, cleaning and converting the machine
