--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                         <img class="aboutImage" src="images/me.jpg" alt="Image of Nikita Moonen">
                     </div>
                     <div class="col-md-7">
-                        <h4>My name is Moonen Nikita</h4>
-                        <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years old</p>
+                        <h4>My name is Nikita Moonen</h4>
+                        <p>Hi there! I'm Nikita Moonen from Ichtegem, Belgium. I'm 26 years old. I am a front - end
+                            developer seeking a full-time position in the field of front-end
+                            developer where i can apply my knowledge and skills for continuous improvement.</p>
                         <p>I have a passion for web design and love to create for web and mobile devices.</p>
                         <div class="cvLink">
                             <a href="cv.html" class="cv">curriculum vitae</a>
