drag text at skill section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <div class=" col-md-12 text-center">
                         <h2>TECHNICAL SKILLS</h2>
                         <p>A representation of my proficiency in each skills</p>
+                        <p>Drag underneath to the side to look more of my skills</p>
                     </div>
                     <div class="owl-carousel owl-theme">
                         <div class="skill">
