three new project to project site

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Projects</title>
+        <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -63,6 +65,63 @@
                 <h3 id="website" class="sectionTitle">websites</h3>
             </div>
             <div class="block">
+                <br>
+                <div class="row">
+                    <br>
+                    <div class="span4">
+                        <img class="img-rpsGame" src="images/portfolio/Rock-paper-scissors-game.PNG"
+                            alt="Rock paper scissors game">
+                        <div class="content-heading">
+                            <h5>Rock paper scissors game</h5>
+                        </div>
+                        <p>Everybody knows the famous Rock Paper Scissors game. I Made one myself to test my JavaScript
+                            skills.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <a class="details" target="_blank"
+                            href="https://nikkiita.github.io/Rock-Paper-Scissors-Game/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank"
+                            href="https://github.com/nikkiita/Rock-Paper-Scissors-Game">CODE</a>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <br>
+                    <div class="span4">
+                        <img class="img-digitalClock" src="images/portfolio/digital-clock.PNG" alt="digital clock">
+                        <div class="content-heading">
+                            <h5>Digital Clock</h5>
+                        </div>
+                        <p>A simple digital clock. I made the background pattern via the website <a
+                                href="https://pattern.flaticon.com/">flaticon</a></p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/digital-clock/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank" href="https://github.com/nikkiita/digital-clock">CODE</a>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <br>
+                    <div class="span4">
+                        <img class="img-temp" src="images/portfolio/temperature-converter-empty.PNG"
+                            alt="blank temperature converter">
+                        <img class="img-temp" src="images/portfolio/temperature-converter-convert.PNG"
+                            alt="convert temperature converter">
+                        <div class="content-heading">
+                            <h5>Temperature converter</h5>
+                        </div>
+                        <p>A basic temperature converter in three different units</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <a class="details" target="_blank" href="https://nikkiita.github.io/temperature-converter/">SEE
+                            MORE...</a>
+                        <a class="details" target="_blank"
+                            href="https://github.com/nikkiita/temperature-converter">CODE</a>
+                    </div>
+                </div>
                 <br>
                 <div class="row">
                     <br>
