--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Sanchez&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/23e679334f.js"></script>
         <link rel="stylesheet" href="./styles/stylesCv.css">
