--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Portfolio Nikita</title>
 
+        <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./images/icons/favicon.ico" type="image/x-icon">
+
         <link rel="stylesheet" href="styles/superslides.css">
         <link rel="stylesheet" href="styles/owl.carousel.min.css">
 
@@ -212,7 +215,7 @@
                                     <i class="fas fa-bolt"></i>
                                 </div>
                                 <div class="squareContent">
-                                    <h2 class="counter">10</h2>
+                                    <h2 class="counter">7</h2>
                                     <h3>Apps</h3>
                                 </div>
                             </div>
