form with working html input

--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
 
                 <div class="contactForm">
                     <button type="button" id="formButton">GET IN TOUCH!</button>
-                    <form id="contactForm" action="contact-form-handler.php" method="post">
+                    <form id="contactForm" action="mailto:nikita-moonen@outlook.com" method="post">
+                        <!-- or contact-form-handler.php inside the action attribute-->
                         <input type="text" name="name" class="formControl" placeholder="Your Name" required>
                         <br>
                         <input type="email" name="email" class="formControl" placeholder="Your Email" required>
                         <br>
-
                         <textarea name="message" class="formControl" rows="4" placeholder="Message" required></textarea>
                         <br>
                         <input type="submit" class="formControl" id="submit" value="SEND">
