changing the skills section and making the project file responsive

--- a/index.html
+++ b/index.html
@@ -119,28 +119,31 @@
                     <div class=" col-md-12 text-center">
                         <h2>TECHNICAL SKILLS</h2>
                         <p>A representation of my proficiency in each skills</p>
-                        <p>Drag underneath to the side to look more of my skills</p>
+                        <p>Drag underneath to the side to see more of my skills</p>
                     </div>
                     <div class="owl-carousel owl-theme">
+
                         <div class="skill">
-                            <span class="chart" data-percent="95">
-                                <span class="percent">95</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/html.png" alt="html-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>HTML</h4>
                             <p>Used in my web based projects</p>
                         </div>
+
                         <div class="skill">
-                            <span class="chart" data-percent="85">
-                                <span class="percent">85</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/css.png" alt="css-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>CSS</h4>
                             <p>Used in my web based projects for styling</p>
                         </div>
+
                         <div class="skill">
-                            <span class="chart" data-percent="65">
-                                <span class="percent">65</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/bootstrap4.png" alt="bootstrap4-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>BOOTSTRAP</h4>
@@ -148,45 +151,68 @@
                         </div>
 
                         <div class="skill">
-                            <span class="chart" data-percent="75">
-                                <span class="percent">75</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/github.png" alt="github-logo">
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>GitHub</h4>
+                            <p>I use this to upload my coding files so it is of use to everyone. </p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/nodejs.png" alt="node-logo">
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>node</h4>
+                            <p>I almost use node daily in the command line</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/javaScript.png" alt="javaScript-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>JavaScript</h4>
                             <p>This forms a large part of any web based project</p>
                         </div>
+
                         <div class="skill">
-                            <span class="chart" data-percent="25">
-                                <span class="percent">25</span>
-                                <canvas height="152" width="152"></canvas>
-                            </span>
-                            <h4>SQL server</h4>
-                            <p>Still learning the good grasps of SQL server</p>
-                        </div>
-                        <div class="skill">
-                            <span class="chart" data-percent="55">
-                                <span class="percent">50</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/jQuery.png" alt="jQuery-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>jQuery</h4>
                             <p>Still learning the good grasps of jQuery</p>
                         </div>
+
                         <div class="skill">
-                            <span class="chart" data-percent="70">
-                                <span class="percent">70</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/flutter.png" alt="flutter-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
-                            <h4>FLUTTER Dart</h4>
+                            <h4>FLUTTER</h4>
                             <p>Used in my cross-platform apps.</p>
                         </div>
+
                         <div class="skill">
-                            <span class="chart" data-percent="10">
-                                <span class="percent">10</span>
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/dart.png" alt="dart-logo">
+                                <canvas height="152" width="152"></canvas>
+                            </span>
+                            <h4>dart</h4>
+                            <p>Used in my cross-platform apps.</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="100">
+                                <img class="skill-logo" src="./images/skills/react.png" alt="React-logo">
                                 <canvas height="152" width="152"></canvas>
                             </span>
                             <h4>React</h4>
                             <p>Recent started with learning React</p>
                         </div>
+
                     </div>
                 </div>
             </div>
